--- a/src/assets/styles/layouts/_base.scss
+++ b/src/assets/styles/layouts/_base.scss
@@ -155,54 +155,6 @@
     }
 }
 
-%inline-list-base {
-    ul, li {
-        margin: 0;
-    }
-
-    li {
-        display: inline-block;
-        vertical-align: top;
-    }
-}
-
-%nav-menu-base {
-    @extend %inline-list-base;
-
-    @include at-query ($min, $postLarge) {
-        ul {
-            height: 21px;
-        }
-    }
-
-    .site-footer & {
-        @include at-query ($max, $large) {
-            ul {
-                @include clearfix();
-            }
-
-            li {
-                display: block;
-                float: left;
-                padding: 0 $gutter/2;
-            }
-        }
-
-        @include at-query ($max, $medium) {
-            li {
-                width: 50%;
-            }
-        }
-
-        @include at-query(null, $postMedium, $large){
-            li {
-                width: percentage(1/3);
-            }
-        }
-    }
-}
-
-
 /* Main Content Layout */
 
 /* This contains all the blocks that are not the header, footer, cart, or slide out side bar. */
